--- a/src/index.css
+++ b/src/index.css
@@ -23,9 +23,9 @@ a:hover {
 }
 
 body {
-  margin: 0;
-  display: flex;
+  display: table;
   place-items: center;
+  margin: 0 auto;
   min-width: 320px;
   min-height: 100vh;
 }
